--- a/24-figure4.Rmd
+++ b/24-figure4.Rmd
@@ -1,9 +1,9 @@
 
 ## Venn 
 
-```{R}
-load("tcr_objects.Rdata")
-fig4_figs_path <- file.path("figures", "fig2")
+```{R  humann-venn}
+if (interactive()) load("tcr_objects.Rdata")
+fig4_figs_path <- file.path("figures", "fig4")
 dir.create(fig4_figs_path, showWarnings = FALSE)
 
 
@@ -31,10 +31,15 @@ ggsave(plot=Vaa ,height=6,width=6,
 
 
 
-```{R}
+```{R mouse-venn}
+# make one for each set because venns can only handle so many
+for (thisrep in c("rep1", "rep2", "rep3")){
+Vmouse = venn::venn(clones_per_pt[grep(thisrep, names(clones_per_pt))], ilab = TRUE, zcolor = "style", opacity = .2, ggplot = TRUE)
 
-(Vmouse = venn::venn(clones_per_pt[c("")], ilab = TRUE, zcolor = "style", opacity = .2, ggplot = TRUE))
-
+ggsave(plot=Vmouse ,height=6,width=6,
+       filename=file.path(fig4_figs_path,paste("fig4_venn_plot_7_mouse", thisrep, ".pdf")), 
+       useDingbats=FALSE)
+}
 
 ```
 
