--- a/33-figureS3.Rmd
+++ b/33-figureS3.Rmd
@@ -7,7 +7,9 @@ editor_options:
 ## S3
 
 ```{R}
-load("./tcr_objects.Rdata")
+if (interactive()) load("tcr_objects.Rdata")
+figures_path_s3 <- file.path("figures", "figS3")
+dir.create(figures_path_s3, showWarnings = FALSE, recursive = TRUE)
 # subset to only within-individual comparisons
 comparison <- tcr_corrs %>% 
   full_join(tcr_sample_metadata, by=c("sample1"="sample_name")) %>% 
@@ -17,9 +19,9 @@ comparison <- tcr_corrs %>%
 g <- ggplot(comparison %>% 
               filter(org.x == "Human") %>%
               filter(gvhd.x == "GvHD") %>% 
-              filter(sample1 != sample2), aes(JSD, morisita))
+              filter(sample1 != sample2), aes(JSD, morisita_nt_raw))
 
-g + facet_grid(. ~ indv_label.x) + 
+S3A <- g + facet_grid(. ~ indv_label.x) + 
   geom_point(aes(color = indv_label.x)) + 
   scale_color_brewer(palette="Set2", guide="none") +
   geom_smooth(size = .5, linetype = 1, method = "lm", fullrange = F, se = FALSE, color = "black") + 
@@ -27,7 +29,7 @@ g + facet_grid(. ~ indv_label.x) +
   theme(axis.text=element_text(size=15, color = "black")) + 
   coord_fixed() +
   theme_classic()
-
+ggsave(filename = file.path(figures_path_s3, "S3A_JSD_vs_morrisita.pdf"), plot = S3A, width = 10, height=5)
 # TODO ggsave this
 g + geom_point(aes(color = indv_label.x), size = 4, shape = 19, alpha = .5) + 
   geom_smooth(size = 1, linetype = 1, method = "lm", se = FALSE) + 
