--- a/20-trees.Rmd
+++ b/20-trees.Rmd
@@ -30,10 +30,12 @@ The following code creates plots showing the high-level relationships between th
 
 
 ```{r}
-for (batch in c("just_patients", "all", "all_no_donor_mice", "all_no_donor_no_healthy_control_mice")){
+for (batch in c("just_patients", "just_humans", "all", "all_no_donor_mice", "all_no_donor_no_healthy_control_mice")){
   # batch="just_patients"
   if (batch == "just_patients"){
-    these_samples <- tcr_sample_metadata %>% filter(org == "Human" & gvhd == "GvHD") 
+    these_samples <- tcr_sample_metadata %>% filter(org == "Human" & (gvhd == "GvHD" | indv_type == "Donor") )
+  } else if (batch == "just_humans"){
+    these_samples <- tcr_sample_metadata %>% filter(org == "Human") 
   } else if (batch == "all"){
     these_samples <- tcr_sample_metadata
   } else if (batch == "all_no_donor_mice"){
@@ -109,7 +111,7 @@ for (batch in c("just_patients", "all", "all_no_donor_mice", "all_no_donor_no_he
   #     geom_cladelab(node=86, label=names(thesecolors)[6], angle=270, align=F, geom='text', textcolor=thesecolors[6], offset=.2, vjust=-.1, barcolor = thesecolors[6]) +
   #     geom_cladelab(node=89, label=names(thesecolors)[7], angle=270, align=F, geom='text', textcolor=thesecolors[7], offset=.2, vjust=-.1, barcolor = thesecolors[7]) 
   # }
-  ggsave(p_tcr_all, height = 2 + n_indv, width = 9, filename = file.path(figs_dir, str_glue("{metri}_TCR_{batch}_tree.pdf")))
+  ggsave(p_tcr_all, height = 3 + n_indv, width = 9, filename = file.path(figs_dir, str_glue("{metri}_TCR_{batch}_tree.pdf")))
   
   
   pmat_tcr_all<- ggplot(
