--- a/22-figure2.Rmd
+++ b/22-figure2.Rmd
@@ -91,8 +91,8 @@ scatterplot_ascending_descending + scatterplot_ascending_skin + scatterplot_asce
 
 tcr_corrs_anno <- tcr_corrs %>% 
 #  select(-sample1_tissue, -sample2_tissue, -sample1_clean, -sample2_clean) %>% 
-  left_join(tcr_sample_metadata, by=c("sample1" = "sample_name")) %>% 
-  left_join(tcr_sample_metadata, by=c("sample2" = "sample_name")) 
+  left_join(tcr_sample_metadata %>% select(sample_name:species), by=c("sample1" = "sample_name")) %>% 
+  left_join(tcr_sample_metadata %>% select(sample_name:species), by=c("sample2" = "sample_name")) 
 
 newannotations <- read.csv("data/updated_colors_dendrograms.csv") 
 
