--- a/32-assess-cell-types.Rmd
+++ b/32-assess-cell-types.Rmd
@@ -3,21 +3,14 @@ output: html_document
 editor_options: 
   chunk_output_type: console
 ---
-```{r setup-TCR, include=FALSE}
-knitr::opts_chunk$set(echo = FALSE, fig.width=10, fig.height=7) 
-library(tidyverse) 
-
-theme_set(theme_classic())
-```
 
 # Assessing Cell Types
-### Parsing and processing the TCR Data
+Here we considered <https://www.ncbi.nlm.nih.gov/pmc/articles/PMC7855494/> to see which TCRs are associated with MAIT and NKT cell types. 
 
-The following chunk serves two purposes: reading in the TCR data, and calculating the JSD correlations based on the TCR profiles.  This takes a while, so the results are saved in an object called `tcr_objects.Rdata`. If this object is not found, it will create it. 
 
 ```{R}
-tcr_objects_path <- "tcr_objects.Rdata"
-load(tcr_objects_path)
+library(tidyverse) 
+if (interactive()) load("tcr_objects.Rdata")
 
 tcr_raw %>% filter(org=="Human") %>% mutate(Tcell_type=case_when(v_family %in% c("TCRBV06", "TCRBV20") ~ "MAIT", v_family == "TCRBV11" ~ "NKT", TRUE ~ "Other")) %>% group_by(sample_name,tissue,  indv_label, Tcell_type) %>% summarize(prop=sum(productive_frequency))  %>% ggplot(aes(x=tissue, y=prop,fill=Tcell_type)) + geom_bar(position="stack", stat="identity") + facet_wrap(~indv_label, scales = "free_x") + theme(axis.text.x = element_text(angle=45, hjust=1))
 
